# servant-crud

./: README.md  servant-crud.cabal  stack.yaml
exec/: Client.hs  Server.hs
src/Servant/: Crud.hs
